[fix] toolbar should be collapsed by default on mobile devices

--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -263,6 +263,9 @@ body .navbar-fixed-top{
 	margin-bottom: 10px;
 
 }
+.subhead-collapse.collapse {
+	height: auto;
+}
 .btn-toolbar .btn-wrapper {
 	display: inline-block;
 	margin-left: 5px;
@@ -516,6 +519,9 @@ h6 { font-size: 12px; line-height: 14px; }
 	.chzn-container .chzn-results,
 	.chzn-container-single .chzn-drop {
 		width: 99% !important;
+	}
+	.subhead-collapse.collapse {
+		height: 0;
 	}
 	.btn-toolbar .btn-wrapper {
 		display: block;
